--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
   font-family: "Nunito", sans-serif;
   background-color: #b2bec3;
   font-size: 18px;
-  margin: 0;
 }
 
 
@@ -22,17 +21,21 @@ p {
    padding-bottom: 30px;
    margin: 0;
 }
-.box {
-    display: grid;
-    width: 550px; 
-    border-radius: 10px;
+
+
+
+.box { 
+    display: block; 
+    width: 550px;
+    margin: auto;
     background-color: white;
+    margin-top: 150px;
+    border-radius: 10px;
     padding: 30px;
-    position: absolute;
-    right: 50%;
-    margin-top: 150px; 
-    filter: drop-shadow(0.5rem 0.5rem 0.5rem grey);
-}
+    filter: drop-shadow(0.5rem 0.5rem 0.5rem grey); 
+     }
+
+
 
 img {
     width: 150px;
@@ -49,13 +52,8 @@ a { font-weight: bold;
     text-transform: uppercase;
     border-radius: 5px;
     padding: 10px 10px;
+    display: block;
 }
-
-
-a:hover {
-    background-color: #0b7bc1;
-} 
-
 
 .twitter {
     background-color:  #1da1f2;
@@ -65,6 +63,14 @@ a:hover {
 .facebook {
     background-color:  #3b5998;
     margin-top: 5px;
+}
+
+.twitter:hover {
+    background-color: #0b7bc1;
+}
+
+.facebook:hover {
+    background-color: #2b406e;
 }
 
 .twitter,
